2005-11-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (cl_progressbar_add),
	(cl_checks_remove), (cl_update_checks), (cl_checks_known),
	(cl_checks_timer_func), (cl_checks_toggled),
	(clearlooks_set_widget_parameters), (draw_flat_box), (draw_check),
	(clearlooks_style_unrealize):

	Checkmarks now animate, too. Thanks once again to Kulyk Nazar (tirpse)!
	Properly disconnecting signals from progressbars and check boxes, I hope. 

2005-11-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_unrealize):

	Don't update the progressbars after unloading the engine.

2005-11-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_progressbar_fill):
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_style.c:
	(cl_progressbar_remove), (update_progressbar), (timer_func),
	(cl_progressbar_known), (cl_progressbar_add), (draw_box),
	(clearlooks_style_init_from_rc):

	Added animating progressbar, thanks to Kulyk Nazar (tirpse)!

2005-11-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_init_from_rc):
	* engines/clearlooks/src/clearlooks_style.h:

	Add "animation" property to ClearlooksStyle as well.

2005-11-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_scale_draw_gradient),
	(clearlooks_draw_progressbar_trough),
	(clearlooks_draw_progressbar_fill): Fixed a little memory leak.
	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init), (theme_parse_boolean),
	(clearlooks_rc_style_parse), (clearlooks_rc_style_merge):
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_init_from_rc):

	Added a new option in gtkrc called "animation". This will be used