@@ -1,3 +1,8 @@
+2005-11-16  Richard A. Stellingwerff  <remenic@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_entry): Draw inner focus ring on GtkEntry.
+
 2005-11-13  Richard A. Stellingwerff  <remenic@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_style.c: (cl_progressbar_add),
